--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,99 @@
-asgiref==3.9.1
-Django==5.2.5
-django-ckeditor==6.7.3
-django-js-asset==3.1.2
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+attrs==25.3.0
+blinker==1.9.0
+cachetools==6.1.0
+certifi==2025.6.15
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+crispy-bootstrap5==2025.6
+cryptography==45.0.4
+defusedxml==0.7.1
+distro==1.9.0
+dj-database-url==3.0.1
+Django==5.2.3
+django-allauth==65.9.0
+django-cors-headers==4.7.0
+django-crispy-forms==2.4
 django-sslserver==0.22
-psycopg2-binary==2.9.10
+djangorestframework==3.16.0
+docusign-esign==5.2.0
+filelock==3.18.0
+Flask==3.1.1
+fonttools==4.59.0
+fpdf2==2.8.3
+frozenlist==1.7.0
+fsspec==2025.7.0
+gitdb==4.0.12
+GitPython==3.1.44
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.10.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+llvmlite==0.44.0
+MarkupSafe==3.0.2
+more-itertools==10.7.0
+mpmath==1.3.0
+multidict==6.6.3
+narwhals==1.48.0
+networkx==3.5
+numba==0.61.2
+numpy==2.2.6
+oauthlib==3.3.1
+openai==0.28.0
+openai-whisper==20250625
+packaging==25.0
+pandas==2.3.1
+pillow==11.3.0
+propcache==0.3.2
+protobuf==6.31.1
+psycopg==3.2.9
+psycopg-binary==3.2.9
+psycopg2==2.9.10
+pyarrow==21.0.0
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydeck==0.9.1
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-dotenv==1.1.1
+pytz==2025.2
+referencing==0.36.2
+regex==2025.7.34
+requests==2.32.4
+requests-oauthlib==2.0.0
+rpds-py==0.26.0
+setuptools==80.9.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
 sqlparse==0.5.3
+streamlit==1.47.0
+sympy==1.14.0
+tenacity==9.1.2
+tiktoken==0.11.0
+toml==0.10.2
+torch==2.8.0+cpu
+tornado==6.5.1
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
 tzdata==2025.2
+urllib3==2.5.0
+watchdog==6.0.0
+Werkzeug==3.1.3
+yarl==1.20.1
